A fix (bug #9756: mysql client failing on dumps containing certain \ sequences).